# LMS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 6c6727d8ef3c_init.py
app/: celery_app.py  main.py
app/api/: api.py  health_check.py
app/api/routers/: auth_router.py  manager_router.py  profile_router.py  teacher_router.py  user_router.py
app/core/: config.py
app/core/constants/: constants.py
app/core/minio/: client.py
app/crud/: crud.py
app/db/: database.py  deps.py  init_db.py
app/db/models/: __init__.py  base.py  check_db.py  course.py  day.py  invite_token.py  lesson.py  lessons_students.py  profile.py  user.py
app/errors/: password_errors.py  user_errors.py
app/schemas/: manager_schemas.py  user_schemas.py
app/services/: email_service.py  manager_service.py  profile_service.py  teacher_service.py  token_service.py  user_service.py
app/templates/: email_template.py
app/validators/: password_validator.py  personal_info_validator.py
app/view/: manager_view.py  profile_view.py  user_view.py
enums/: lesson.py  profile_type.py  user_status.py  week_days.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/api/: auth.js
frontend/src/components/: Footer.jsx  Header.jsx  (+1 more)
my-frontend/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
my-frontend/src/: App.css  App.js  userContext.js  СolorPicker.js
nginx/: nginx.conf
utils/: auth_generator.py  hash_password.py  jwt_generator.py
(+48 files in other folders)
