[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill",email = "k.kropachev@andersenlab.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "redis (>=7.2.0,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "minio (>=7.2.20,<8.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "alembic (>=1.18.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
